<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/dashboardMenuItemFragment"
        app:showAsAction="ifRoom"
        android:orderInCategory="1"
        android:iconTint="@color/colorCyan"
        android:icon="@drawable/ic_dashboard_black_24dp"
        android:title="@string/title_dashboard"
    />

    <item
        android:id="@+id/ordersFragment"
        app:showAsAction="ifRoom"
        android:orderInCategory="2"
        android:iconTint="@color/colorCyan"
        android:icon="@drawable/ic_baseline_person_24"
        android:title="@string/title_myhub" />

    <item
        android:id="@+id/cartFragment"
        app:showAsAction="ifRoom"
        android:orderInCategory="2"
        android:iconTint="@color/colorCyan"
        android:icon="@drawable/ic_cart_black_24dp"
        android:title="@string/title_cart" />

</menu>
