<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:id="@+id/card_view"
    android:layout_margin="3dp"
    app:cardBackgroundColor="@color/colorPrimary"
    app:cardCornerRadius="12dp"
    app:cardElevation="3dp"
    app:contentPadding="4dp" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp" >

        <ImageView
            android:id="@+id/item_image"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="14dp"
            android:layout_marginLeft="14dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginRight="16dp"
            android:adjustViewBounds="true"
            android:padding="6dp"
            android:scaleType="fitCenter"
            android:src="@drawable/menu_image"/>

        <com.mobile.chickenavailabilityapplication.util.CustomTextView
            android:id="@+id/item_heading"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/text_margin"
            app:customFont="fonts/Roboto-Regular.ttf"
            android:textColor="@color/colorLightBlack"
            android:text="@string/item_title"
            android:layout_toEndOf="@+id/item_image"
            android:layout_toRightOf="@+id/item_image"
            android:layout_alignParentTop="true"
            style="@style/TextAppearance.AppCompat.Headline" />

        <com.mobile.chickenavailabilityapplication.util.CustomTextView
        android:id="@+id/item_price"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="2dp"
        app:customFont="fonts/Roboto-Regular.ttf"
        android:text="@string/item_price"
        android:textColor="@color/colorLightBlack"
        android:layout_toEndOf="@+id/item_image"
        android:layout_toRightOf="@+id/item_image"
        android:layout_below="@+id/item_heading"
        style="@style/TextAppearance.AppCompat.Subhead" />

        <com.mobile.chickenavailabilityapplication.util.CustomTextView
            android:id="@+id/item_availability"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="2dp"
            app:customFont="fonts/Roboto-Regular.ttf"
            android:text="@string/item_availability"
            android:textColor="@color/colorLightBlack"
            android:layout_toEndOf="@+id/item_image"
            android:layout_toRightOf="@+id/item_image"
            android:layout_below="@+id/item_price"
            style="@style/TextAppearance.AppCompat.Subhead" />


    </RelativeLayout>
</androidx.cardview.widget.CardView>