<?xml version="1.0" encoding="utf-8"?>
<!--<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:id="@+id/card_view"
    android:layout_margin="3dp"
    app:cardBackgroundColor="@color/colorPrimary"
    app:cardCornerRadius="12dp"
    app:cardElevation="3dp"
    app:contentPadding="4dp" >-->

    <RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:id="@+id/item_view"
        android:layout_margin="3dp"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
         >

        <RelativeLayout
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="14dp"
            android:layout_marginLeft="14dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:id="@+id/item_image_layout"
            android:padding="6dp"
            android:layout_marginRight="16dp">

            <ImageView
                android:id="@+id/item_image"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:adjustViewBounds="true"
                android:scaleType="fitXY"
                android:src="@drawable/menu_image"/>

            <com.mobile.chickenavailabilityapplication.util.CustomTextView
                android:id="@+id/item_price"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:customFont="fonts/Lato-Bold.ttf"
                android:text="@string/item_price"
                android:textColor="@color/colorLightBlack"
                android:background="@color/colorWhite"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="20dp"
                style="@style/TextAppearance.AppCompat.Body1" />
        </RelativeLayout>


        <com.mobile.chickenavailabilityapplication.util.CustomTextView
            android:id="@+id/item_heading"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/text_margin"
            app:customFont="fonts/Roboto-Regular.ttf"
            android:textColor="@color/colorLightBlack"
            android:text="@string/item_title"
            android:layout_toEndOf="@+id/item_image_layout"
            android:layout_toRightOf="@+id/item_image_layout"
            android:layout_alignParentTop="true"
            style="@style/TextAppearance.AppCompat.Light.SearchResult.Title" />



        <com.mobile.chickenavailabilityapplication.util.CustomTextView
            android:id="@+id/item_subheading"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="2dp"
            app:customFont="fonts/Roboto-Regular.ttf"
            android:text="@string/item_subheading"
            android:textColor="@color/colorLightBlack"
            android:layout_toEndOf="@+id/item_image_layout"
            android:layout_toRightOf="@+id/item_image_layout"
            android:layout_below="@+id/item_heading"
            style="@style/TextAppearance.AppCompat.Body1" />

    <View
        android:id="@+id/settings_Text_bottom_border"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/colorLightGray"
        android:layout_below="@+id/item_image_layout"
        android:layout_marginTop="3dp"
        />
    </RelativeLayout>
<!--</androidx.cardview.widget.CardView>-->