<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:id="@+id/card_view"
    android:focusable="true"
    android:clickable="true"
    app:cardBackgroundColor="@color/colorPrimary"
     >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="5dp"
         >

        <RelativeLayout
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="5dp"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="5dp"
            android:id="@+id/item_image_layout"
            android:layout_marginRight="16dp">

            <ImageView
                android:id="@+id/item_image"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:adjustViewBounds="true"
                android:background="@android:color/transparent"
                android:layout_centerVertical="true"
                android:scaleType="fitCenter"
                android:src="@drawable/menu_image"/>

           <!-- <com.mobile.chickenavailabilityapplication.util.CustomTextView
                android:id="@+id/item_price"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:customFont="fonts/Lato-Bold.ttf"
                android:text="@string/item_price"
                android:textColor="@color/colorLightBlack"
                android:background="@color/colorWhite"
                android:layout_alignParentBottom="true"
                android:layout_centerHorizontal="true"
                android:layout_marginBottom  ="20dp"
                style="@style/TextAppearance.AppCompat.Body1" />-->
        </RelativeLayout>


        <com.mobile.chickenavailabilityapplication.util.CustomTextView
            android:id="@+id/item_heading"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/text_margin"
            app:customFont="fonts/Roboto-Regular.ttf"
            android:textColor="@color/colorLightBlack"
            android:text="@string/item_title"
            android:layout_toEndOf="@+id/item_image_layout"
            android:layout_toRightOf="@+id/item_image_layout"
            android:layout_alignParentTop="true"
            style="@style/TextAppearance.AppCompat.Light.SearchResult.Title" />

        <com.mobile.chickenavailabilityapplication.util.CustomTextView
            android:id="@+id/item_price"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="2dp"
            app:customFont="fonts/Roboto-Bold.ttf"
            android:text="@string/item_price_per_kg"
            android:textColor="@color/colorLightBlack"
            android:layout_toEndOf="@+id/item_image_layout"
            android:layout_toRightOf="@+id/item_image_layout"
            android:layout_below="@+id/item_heading"
            android:textSize="20sp"
             />


        <com.mobile.chickenavailabilityapplication.util.CustomTextView
            android:id="@+id/item_subheading"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="2dp"
            app:customFont="fonts/Roboto-Regular.ttf"
            android:text="@string/item_subheading"
            android:textColor="@color/colorLightBlack"
            android:layout_toEndOf="@+id/item_image_layout"
            android:layout_toRightOf="@+id/item_image_layout"
            android:layout_below="@+id/item_price"
            style="@style/TextAppearance.AppCompat.Body1" />


    </RelativeLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_above="@id/bottomNavView"
        android:background="@drawable/shadow_rect"
        android:layout_gravity="bottom"
         />
</androidx.cardview.widget.CardView>